It just shows the 1 book as we cant click on it.

--- a/templates/userHome.html
+++ b/templates/userHome.html
@@ -2,11 +2,14 @@
 <html>
 <body>
 
-<p>Please click on the book to buy .</p>
+<p>Please click on the book to buy.</p>
 
-<a href="default.asp">
-  <img src="C:\Users\mash4\Desktop\BookImages\thinkPython.png" style="leng:200;">
-</a>
+
+<p href="default.asp">
+  <img src="{{url_for('static', filename = '1.png')}}">
+
+</p>
+
 
 
 
